k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pbi-generator
  namespace: pbi-generator
  labels:
    app: pbi-generator
spec:
  selector:
    app: pbi-generator
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
  type: ClusterIP
