k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: pbi-generator
  namespace: pbi-generator
  labels:
    app: pbi-generator
spec:
  to:
    kind: Service
    name: pbi-generator
    weight: 100
  port:
    targetPort: 5000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
